--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -7,6 +7,13 @@
     <nav id="main" class="w-full text-right text-lg">
         <div class="border-t-4 border-solid border-brand relative py-1">
             <div class="nav-link">
+                <a href="/products" class="font-black text-brand">Crohn's Cookbook</a>
+
+            </div>
+        </div>
+        
+        <div class="border-t-4 border-solid border-brand relative py-1">
+            <div class="nav-link">
                 <a href="/update" class="font-black text-brand">Updates</a>
 
             </div>
