--- a/site/layouts/section/products.html
+++ b/site/layouts/section/products.html
@@ -4,20 +4,22 @@
     {{ partial "jumbotron" (dict "imageUrl" .Params.image "title" .Title) }}
     
     {{ with .Params.intro }}
-    <div class="flex flex-row">
-      <div class="ph3 mw7 center">
-        <h2 class="f2 b lh-title mb2">{{.intro.heading}}</h2>
-        <p class="mb4 mw6">{{.intro.description}}</p>
+    <div class="flex flex-row px-5 pb-4">
+      <h2 class="">{{.heading}}</h2>
+      <p class="">{{.description}}</p>
     
-        <div class="flex flex-row mb3">
-          {{ range .blurbs }}
-          <div class="w-1/2">
-            <img src="https://res.cloudinary.com/airjoshb/image/upload/w_350,f_auto/{{.image}}" alt="" class="center db mb3" style="width: 240px">
-            <p>{{.text}}</p>
-            <a href="{{.url}}" target="_blank">Click to Order</a>
+      <div class="flex flex-row justify-around">
+        {{ range .blurbs }}
+        <div class="w-1/4 conatainer flex justify-center items-center">
+          <div class="rounded-lg shadow-xl bg-white">
+            <div class="p-5">
+              <img src="https://res.cloudinary.com/airjoshb/image/upload/w_350,f_auto/{{.image}}" alt="" class="center db mb3" style="width: 240px">
+              <header class="text-lg pb-5"><p>{{.text}}</p></header>
+              <footer class="text-center space-x-5"><a href="{{.url}}" class="py-2 px-4 mt-5 bg-green> rounded-lg text-white font-semibold hover:bg-green-600" target="_blank">Click to Order</a></footer>
+            </div>
           </div>
-          {{ end }}
         </div>
+        {{ end }}
       </div>
     </div>
     {{ end }}
