--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -22,6 +22,9 @@
                 <a href="#now" class="font-black">Now</a>
             </div>
             <div class="border-t-4 border-solid border-grey-lightest text-right text-brand-light relative py-1">
+              <a href="/products" class="font-black">Crohn's Disease Cookbook</a>
+            </div>
+            <div class="border-t-4 border-solid border-grey-lightest text-right text-brand-light relative py-1">
                 <a href="/update" class="font-black">Updates</a>
             </div>
             <div class="border-t-4 border-solid border-grey-lightest text-right text-brand-light relative py-1">
