--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -22,7 +22,7 @@
                 <a href="#now" class="font-black">Now</a>
             </div>
             <div class="border-t-4 border-solid border-grey-lightest text-right text-brand-light relative py-1">
-              <a href="/products" class="font-black">Crohn's Disease Cookbook</a>
+              <a href="/products" class="font-black">Crohn's Cookbook</a>
             </div>
             <div class="border-t-4 border-solid border-grey-lightest text-right text-brand-light relative py-1">
                 <a href="/update" class="font-black">Updates</a>
