--- a/site/layouts/update/single.html
+++ b/site/layouts/update/single.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
   <div class="flex" id="update">
-    <div class="w-3/4 m-auto overflow-hidden bg-white shadow-lg px-5 pt-8 pb-4" id="post">
+    <div class="w-3/4 mx-auto md:mt-20 overflow-hidden bg-white shadow-lg px-5 pt-8 pb-4" id="post">
       <div class="mb-8 flex items-end">
         {{ if .Params.image }}<img src="https://res.cloudinary.com/airjoshb/image/upload/w_600,f_auto/{{ .Params.image }}" alt="{{ .Title }}" class="w-3/5 border-r-8 border-solid border-green-brand" />{{ end }}
         <h1 class="font-serif text-brand leading-none mb-0 ml-3">{{.Title}}</h1>
