--- a/src/css/brand.css
+++ b/src/css/brand.css
@@ -20,6 +20,7 @@ figure {
     margin-right: 5%;
     margin-top: 5%;
 }
+.hidden {display: none;}
 figure img { @apply .w-full;}
 #post #body p, #update p, #body ul, #post #body ol, .update p { @apply .mb-3; @apply .font-serif; }
 #post h1 {font-size: 3.3rem;}
