--- a/site/layouts/partials/jumbotron.html
+++ b/site/layouts/partials/jumbotron.html
@@ -1,4 +1,4 @@
-<div class="w-full mx-auto md:mt-20 overflow-hidden px-5 pt-8 pb-4" id="">
+<div class="w-full mx-auto md:mt-20 overflow-hidden px-5 lg:pt-8 pb-4" id="">
   <div class="mb-8 flex items-end">
     <img class="border-r-8 border-solid border-green-brand" src=https://res.cloudinary.com/airjoshb/image/upload/t_post_size/v1556313746/{{.imageUrl}} />
   </div>
