--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -1,4 +1,4 @@
-<div id="" class="lg:hidden w-full p-4 text-right flex flex-row absolute flex-no-shrink">
+<div id="" class="lg:hidden md:block w-full p-4 text-right flex flex-row absolute flex-no-shrink">
     <div class="logo mb-4">
         <a href="/" class="shadow-none hover:shadow-none">
             <svg class="z-50 fill-brand w-16" viewBox="0 0 327 256" style="height: 100%;" xmlns="http://www.w3.org/2000/svg">
@@ -40,7 +40,7 @@
     </nav>
 </div>
 
-<div id="sidebar-nav" class="lg:w-1/6 md:hidden p-4 text-right flex flex-col flex-no-shrink">
+<div id="sidebar-nav" class="lg:w-1/6 lg:block md:hidden p-4 text-right flex flex-col flex-no-shrink">
     <div class="logo mb-4">
         <a href="/" class="shadow-none hover:shadow-none">
             {{ partial "logo" (dict "class" "fill-brand h-32 w-32")  }}
