--- a/site/layouts/post/single.html
+++ b/site/layouts/post/single.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
   <div class="flex" id="blog">
-    <div class="w-3/4 mx-auto md:mt-20 overflow-hidden px-5 lg:pt-8 pb-4" id="post">
+    <div class="w-3/4 mx-auto lg:mt-0 md:mt-20 overflow-hidden px-5 lg:pt-8 pb-4" id="post">
       <div class="mb-8 flex items-end">
         {{ if .Params.image }}<img src="https://res.cloudinary.com/airjoshb/image/upload/f_auto,w_600/{{ .Params.image }}" alt="{{ .Title }}" class="w-3/5 border-r-8 border-solid border-green-brand" />{{ end }}
         <div class="ml-3">
