--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -1,4 +1,4 @@
-<div id="" class="lg:hidden md:block w-full p-4 text-right flex flex-row absolute flex-no-shrink">
+<div id="" class="lg:hidden w-full p-4 text-right flex flex-row absolute flex-no-shrink">
     <div class="logo mb-4">
         <a href="/" class="shadow-none hover:shadow-none">
             <svg class="z-50 fill-brand w-16" viewBox="0 0 327 256" style="height: 100%;" xmlns="http://www.w3.org/2000/svg">
