--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -6,27 +6,32 @@
         </svg></a>
     </div>
     <nav id="mobile" class="flex items-center justify-end flex-row w-full text-right text-md" style="/* align-items: center; */">
-        <div class="border-b-4 border-solid border-green-brand relative py-1 mx-2">
+        <div class="  border-r-4 pr-2 border-solid border-green-brand">      
+          <svg class="h-5 green-brand" height="20" width="20">
+            <circle cx="10" cy="10" r="8" stroke="transparent" fill="brand"></circle>
+          </svg>
+        </div>
+        <div class="relative py-1 mx-2">
             <div class="nav-link">
-                <a href="/products" class="font-black text-brand">Crohn's Cookbook</a>
+                <a href="/products" class="font-black text-brand hover:border-b-4 border-solid border-green-brand">Crohn's Cookbook</a>
 
             </div>
         </div>
         
-        <div class="border-b-4 border-solid border-brand relative py-1 mx-2">
+        <div class="relative py-1 mx-2">
             <div class="nav-link">
-                <a href="/update" class="font-black text-brand">Updates</a>
+                <a href="/update" class="font-black text-brand hover:border-b-4 border-solid border-green-brand">Updates</a>
 
             </div>
         </div>
-        <div class="border-b-4 border-solid border-brand relative py-1 mx-2">
+        <div class=" relative py-1 mx-2">
             <div class="nav-link">
-                <a href="/post" class="font-black text-brand">Posts</a>
+                <a href="/post" class="font-black text-brand hover:border-b-4 border-solid border-green-brand">Posts</a>
             </div>
         </div>
-        <div class="border-b-4 border-solid border-brand relative py-1 mx-2">
+        <div class="relative py-1 mx-2">
             <div class="nav-link">
-                <a href="/#about" class="font-black text-brand">About Joshua</a>
+                <a href="/#about" class="font-black text-brand hover:border-b-4 border-solid border-green-brand">About Joshua</a>
 
             </div>
         </div>
@@ -40,7 +45,7 @@
     </nav>
 </div>
 
-<div id="sidebar-nav" class="lg:w-1/6 lg:block md:hidden p-4 text-right flex flex-col flex-no-shrink">
+<div id="sidebar-nav" class="lg:w-1/6 lg:block hidden p-4 text-right flex flex-col flex-no-shrink">
     <div class="logo mb-4">
         <a href="/" class="shadow-none hover:shadow-none">
             {{ partial "logo" (dict "class" "fill-brand h-32 w-32")  }}
