--- a/site/layouts/_default/list.html
+++ b/site/layouts/_default/list.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <div class="flex justify-end" id="list">
-  <div class="p-4">
+  <div class="p-4 lg:mt-0 mt-20">
     {{ if eq .Kind "taxonomy" }}
       <div class="text-3xl font-normal text-green-brand text-right border-b-4 border-solid border-green-brand">{{ .Title }}</div>
       <svg class="h-5 green-brand self-end mb-5" height="20" width="20"><circle cx="10" cy="10" r="8" stroke="transparent" fill="brand"></circle></svg>
