--- a/src/css/brand.css
+++ b/src/css/brand.css
@@ -81,6 +81,7 @@ nav#mobile div.nav-link:hover::before {
 nav#main div:hover::before {background-color: config("colors.brand");}
 nav#mobile div:hover::before {background-color: config("colors.green-brand");}
 nav a, nav a:hover {box-shadow: none;}
+.block {display:block !important;}
 .update p img {@apply .w-1/2; @apply .ml-2; @apply .mb-2; @apply .float-right; @apply .inline;}
 #body p img {@apply .w-2/5; @apply .pl-2; @apply .pb-2; @apply .float-right; @apply .inline; @apply .m-0;}
 #list img {
