--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -45,7 +45,7 @@
     </nav>
 </div>
 
-<div id="sidebar-nav" class="lg:w-1/6 lg:block hidden p-4 text-right flex flex-col flex-no-shrink">
+<div id="sidebar-nav" class="lg:w-1/6 hidden lg:block p-4 text-right flex flex-col flex-no-shrink">
     <div class="logo mb-4">
         <a href="/" class="shadow-none hover:shadow-none">
             {{ partial "logo" (dict "class" "fill-brand h-32 w-32")  }}
